[tool.poetry]
name = "hackathon_rl_xhec"
version = "0.1.0"
description = ""
authors = ["Yann Berthelot <yannberthelot1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
pandas = "^1.1.4"
tqdm = "^4.51.0"
Tensorforce ={git = "https://github.com/YannBerthelot/tensorforce.git"}
gym = {git = "https://github.com/YannBerthelot/gym_rocketLander.git"}
Box2D = "^2.3.10"
PyVirtualDisplay = "^1.3.2"
ipython = "^7.0"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"